# curator

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
extension/: .gitignore  README.md  background.js  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: dashboard.html  main.rs
src/: main.rs
